# c-web-server

./: .gitignore  flake.nix
pages/: index.html
posts/: post.html  post2.md
server/: CMakeLists.txt  main.c
server/files/: files.c  files.h
server/networking/: IO.c  IO.h  endpoints.c  endpoints.h  requests.c  requests.h
src/: CMakeLists.txt  IO.c  IO.h  files.c  files.h  main.c  requests.c  requests.h
website/: tailwind.config.js
website/pages/: index.html  output.css  test.html
website/posts/: post.md
